David Binderman in PR bin/50714: fix memory leak